# ChangeLog for net-p2p/rsstorrent
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-p2p/rsstorrent/ChangeLog,v 1.26 2013/05/17 15:48:09 AzP Exp $

*rsstorrent-0.6 (17 May 2013)
  
  17 May 2013; Peter Asplund <peterasplund@gentoo.se> rsstorrent-0.6.ebuild:
  +files/rsstorrent-0.6.ebuild
  Initial commit