@@ -1,4 +1,4 @@
-DIST rsstorrent-0.6.tar.gz 9335 SHA256 e885c2eca378a033f9b2d01e4bb938c0152770e47f0f9abe44891a09059062cf SHA512 e70288b6e0745dba8461ec7e748f89df771f19d2443f27c96cf9e032b425328a1dca06e3ef0c28c3ae5582145d4b9c73b489815a190c3751979e3fc0a4f61265 WHIRLPOOL 74727a663b28cd2c5c090ee45577684e0cb499da14e3936fdddabb88f2bfc24d37415f4017e5e13aac1b2c572d1ef28e29623597f25e7cbbd09d74f209d4b566
-EBUILD rsstorrent-0.6.ebuild 1278 SHA256 ec7ce77dac1c8f01dbac1de41ae0501a4874b50ef7a9253402e5028e19b536c3 SHA512 560dbcd9bb4525253245fb98ab5d0d222c1b8e8e1d7a15672e0fd9fd54689c8673a4a1c9d9d659be745324771472132ca7dff90fe3b6ae03571356198613d6b2 WHIRLPOOL 80dd83b88134f3e4d3be6eaeb4deefe2440869d6586b6cccf383fb374281d92c5bd71621f9cff2d903aaf3888b8ff6a617966a0a653a24e31fb21cfefdae26d1
-MISC ChangeLog 365 SHA256 c4c316389bc1444d2f151a3060f6a93036e323dc476e4e7525fc55f0a0c92ec3 SHA512 8e21dad301d4fdf20c8fb95c7a921b3a2b1503b9a845292b42c9c7b8a68576e03068018d1cbf27c345d2c4aeace03e96ca0bf851aec90b019cd7a55879ca8081 WHIRLPOOL e6078599fcb80c2f19e3a7069b72e4663a4e6c311dd53a97db254ac86933b47a204dce05f95f9df7cb0524631a9cde5273093b07ae2536322c24ab814ca54b84
-MISC metadata.xml 252 SHA256 359a260f07392ed361cfbcb7174af60590068c1a6bd7e26dc3ad763bfbe2a559 SHA512 e9be4331bd6cfcef460b318cceabf48f3f80e51b80c36856232f662bdd3dc442357181a57234eec506af97dddfeffe559a864804a4db028f706cf76942573d46 WHIRLPOOL d0d8e366cd186136e3fa39b1adfc0c0612baa225e761ded2de2ce38f24637ea64cee6ffe67306462c701a8a9fb601e5c159f054df156c6878ec715d26425ff81
+DIST rsstorrent-0.6.tar.gz 9343 SHA256 d278588d49987d913a2eb86e0cd14adfc0b20957ca4b4ca06fb2100ee39e929d SHA512 7f57610129443e5c24c90be1c32bc5855e0445671fb5b6089edb9017f7d57e5d96b919f6e25042cc55ab7682a5393a4052331c2cb9831f8c964480800f57b6c4 WHIRLPOOL 0fcde37e1a2d87f07073477e614df3d575ab4fca7838b388db56e1274f23a890cc6096bc5460b227987db854024eafeafd5def8ab62585e30ac0e94a323c0c6a
+EBUILD rsstorrent-0.6.ebuild 1198 SHA256 9d77c342f0ddf6ad7829fc9352ce43f7532765f5edb958fa2f214f705a4f8fdb SHA512 71afd0c4080d72879c6ca53acdc8d51b58e005ddf598835267e9ec17755f869c9e85a3d29a3033cbb015f47cd9da8ab7b9697c62e13db0a68ed0b40ed10abf16 WHIRLPOOL 53ed15ea768e3f3d2347394fb3116cba3c59d5a65438e43e39eab4d5352a15050bdfbe45e884232d446a7a0dea17c08b6a2d0f0a65c3b60abe2a2fd90da3bc3c
+MISC ChangeLog 523 SHA256 30265ece57e27309c6f17f14bbc69abb317e130aed7c9168e9efc905bd83e123 SHA512 75f527eb153001ec3f1a4aee63002975a802489c153c6da4591840b6f3d38a019a12aa1e5b19b8d475dc75e427124af7a272eed51583fa6f0be922fb46ce4ccc WHIRLPOOL 7d1da09be38841f2e5d05881a072bca5d7998867b525444e777b6a8418cd21c217b152d51e5f190a695e085c4b5111cf12ada61ac86129d8758b36706feb161c
+MISC metadata.xml 331 SHA256 2185e5c2f348af8d2ecdb14e05ccf423abf2e52e4b74c3e159a0015f5e44319d SHA512 9eaecda7f7f083340d886268ac42df9f1e4b7a7940e59d8d3fff9cb8cf5d39378f2d76ad0c666d9213e5a99c99ba940e73bfba66cd8ffdab1647858d44ae4a4d WHIRLPOOL c2dd8ae46d57b24eb0c6e9b412306abfe0acfd58d5a40260428be54ffaea3d83f6aeb4c2fa7d5cbae288cf5e16db35b06f30653529d530f16504f84acbfc1e21
