@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<herd></herd>
-	<maintainer>
+	<maintainer type="project">
 		<email>peterasplund@gentoo.se</email>
 		<name>Peter Asplund</name>
 	</maintainer>
+	<upstream>
+		<remote-id type="github">AzP/rsstorrent</remote-id>
+	</upstream>
 </pkgmetadata>
