@@ -1,6 +1,10 @@
 # ChangeLog for net-p2p/rsstorrent
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2017 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/net-p2p/rsstorrent/ChangeLog,v 1.26 2013/05/17 15:48:09 AzP Exp $
+
+  18 Mar 2017; Peter Asplund <peterasplund@gentoo.se> metadata.xml,
+  rsstorrent-0.6.ebuild:
+  Update ebuild to new distutils. Fixes bug #609782 and #613012
 
 *rsstorrent-0.6 (17 May 2013)
   
